New stylesheets, icons and on/off for map markers and accordion controls.

--- a/operations/managerapp/assets/css/manager-styles-old.css
+++ b/operations/managerapp/assets/css/manager-styles-old.css
@@ -13,15 +13,7 @@
 }
 
 #sitter {
-    background-image: url('../img/icon-sitter.png');
-    background-size: cover;
-    width:  32px;
-    height: 32px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-#sitter-disabled {
-    background-image: url('../img/icon-sitter-disabled.png');
+    background-image: url('../img/sitter1.png');
     background-size: cover;
     width:  32px;
     height: 32px;
@@ -46,6 +38,31 @@
 }
 .marker-arrived {
   background-image: url('../img/location-marker-arrived.png');
+  background-size: cover;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.marker-late {
+  background-image: url('../img/location-marker-late.png');
+  background-size: cover;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.marker-complete {
+  background-image: url('../img/check-mark-green@3x.png');
+  background-size: 85%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: forestgreen;
+}
+.marker-canceled {
+  background-image: url('../img/red-dot@3x.png');
   background-size: cover;
   width: 32px;
   height: 32px;
@@ -77,21 +94,14 @@
   cursor: pointer;
 }
 .marker-submitted {
-  background-image: url('../img/location-marker-submitted-review.png');
+  background-image: url('../img/vr-review.png');
   background-size: cover;
   width: 32px;
   height: 32px;
   border-radius: 50%;
   cursor: pointer;
 }
-.marker-late {
-  background-image: url('../img/location-marker-late.png');
-  background-size: cover;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+
 .map-marker {
   border-radius: 100%;
   margin: 10px 0;
@@ -100,31 +110,7 @@
 i {
   font-family: Roboto 'sans-serif';
 }
-.marker-complete {
-  background-image: url('../img/location-marker-alldone.png');
-  background-size: 85%;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  background-color: forestgreen;
-}
-.marker-canceled {
-  background-image: url('../img/location-marker-cancelled.png');
-  background-size: cover;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.marker-visitreport {
-  background-image: url('../img/location-marker-complete-noreport.png');
-  background-size: cover;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+
 .button {
   display: inline-block;
   border: none;
@@ -275,14 +261,5 @@ list-style: none;
     border-color: #666;
     color: #444;
 }  
-
-
-.mapboxgl-control-container {
-  display: none;
-}
-
-#visitListBySitterAccordions>.panel-group {
-  margin-bottom: 0;
-}
 
  
